Add unit toggle to form & description to display

--- a/index.html
+++ b/index.html
@@ -16,12 +16,19 @@
                 <input id="city" type="text" placeholder="city">
                 <input id="state" type="text" placeholder="state (2 letter code)">
                 <input id="country" type="text" placeholder="country (2 letter code)">
+                <div class="toggle">
+                    <label class="switch">
+                        <input type="checkbox" id="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                    <div class="units" id="units">Celsius</div>
+                </div>
             </div>
                 <div class="button grow" id="button">Show me the weather!</div>
         </form>
         
     </div>
-    <div class="container">
+    <div class="container weather">
         <div class="display" id="display">The Weather</div>
     </div>
 </body>
